--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,63 @@
+/* styles.css */
+body {
+    background-color: lightblue;
+}
 
+.container {
+    display: grid;
+    place-items: center;
+    grid-gap: 1em;
+}
 
+.card {
+    background: white;
+    border-radius: 2em;
+    display: flex;
+    flex-direction: row;
+    overflow: hidden;
+    padding: 2em;
+}
+
+.card--header {
+    width: 100%;
+}
 
 .card--image {
-    width: 100%;
-    height: 200px;
+    border-radius: 1em;
     object-fit: cover;
+    height: 100%;
+    width: 100%;
+}
 
+.card--body {
+    padding: 2em;
+    flex: 3
+}
+
+.card--header {
+    flex: 2
+}
+
+
+.parent {
+    contain: layout inline-size style;
+    resize: horizontal;
+    overflow: auto;
+}
+
+.large {
+    width: 100%;
+}
+
+.small {
+    width: 500px;
+}    
+
+
+@container(max-width: 500px) {
+    .card {
+        flex-direction: column;
+        background-color: hotpink;
+        color: white;
+    }
 }
